# Programming-Familiarization-Part-2

./: .gitignore  README.md  TeamH_wheitman_Task7.2.md  main.launch.py
src/arithmetic/: CMakeLists.txt  package.xml
src/arithmetic/src/: arithmetic_node.cpp
src/chatbot/: CMakeLists.txt  package.xml
src/chatbot/src/: chatbot_node.cpp
src/chatbot_node/: CMakeLists.txt  package.xml
src/chatbot_node/src/: chatbot_node.cpp
src/counter/: CMakeLists.txt  package.xml
src/counter/src/: counter_node.cpp
src/counter_node/src/: counter_node.cpp
src/message_ui/: package.xml  plugin.xml  setup.cfg  setup.py
src/message_ui/resource/: MessageUI.ui
src/message_ui/src/message_ui/: main.py  message_ui.py  message_ui_widget.py
src/mrsd_msgs/: CMakeLists.txt  package.xml
src/mrsd_msgs/msg/: ArithmeticReply.msg  SentMsg.msg
